--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,72 @@
 <html>
 	<head>
 		<title>教科書から問題を作る！</title>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 	</head>
 	<body>
-		Hello World!
+		<section class="section">
+			<div class="container">
+				<div class="dropdown is-active">
+					<div class="dropdown-trigger">
+						<button class="button is-black" aria-haspopup="true" aria-controls="dropdown-menu">
+							<span>ファイルをアップロード</span>
+							<span class="icon is-small">
+								<i class="fas fa-upload"></i>
+							</span>
+						</button>
+					</div>
+					<div class="dropdown-menu" id="dropdown-menu" role="menu">
+						<div class="dropdown-content">
+							<div class="file">
+								<label class="file-label">
+									<input class="file-input" type="file" name="file">
+									<span class="file-cta">
+										<span class="file-icon">
+											<i class="fas fa-cloud-upload-alt"></i>
+										</span>
+										<span class="file-label">
+											Choose a file…
+										</span>
+									</span>
+								</label>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- 問題数選択 -->
+		<section class="section">
+			<div class="container">
+				<div class="field">
+					<label class="label" for="number-of-problems">問題数</label>
+					<div class="control">
+						<input class="input" type="number" id="number-of-problems" name="number_of_problems">
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- 難易度選択 -->
+		<section class="section">
+			<div class="container">
+				<div class="field">
+					<label class="label" for="difficulty">難易度</label>
+					<div class="control">
+						<div class="select">
+							<select id="difficulty" name="difficulty">
+								<option value="">選択してください</option>
+								<option value="easy">簡単</option>
+								<option value="medium">普通</option>
+								<option value="hard">難</option>
+							</select>
+						</div>
+					</div>
+				</div>    
+			</div>
+		</section>
+		  
 	</body>
+    <script src="./script.js"></script>
 </html>
