rename files and write

--- a/public/result.html
+++ b/public/result.html
@@ -27,14 +27,17 @@
             <input type="radio" name="answer" value="option4">
             option 4
             </label><br>   
-        </div>       
+        </div>  
+        <div id="description"></div>     
     </div>
 
     <div class="buttons is-centered">
-      <a class="button is-success" id="submit">送信</a>
-    </div>
+        <a class="button is-success" id="redirectToHome">ホームに戻る</a>
+        <a class="button is-info" id="regenerateQuestion">問題を再生成</a>
+      </div>
+      
 
-    <script src = "form.js"></script>
+    <script src = "result.js"></script>
 
 </body>
 </html>
