--- a/public/form.html
+++ b/public/form.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="buttons is-centered">
-      <a class="button is-success" id="submit">送信</a>
+      <a class="button is-success is-large" id="submit">送信</a>
     </div>
 
     <script src = "form.js"></script>
