--- a/public/result.html
+++ b/public/result.html
@@ -32,8 +32,8 @@
     </div>
 
     <div class="buttons is-centered">
-        <a class="button is-success" id="redirectToHome">ホームに戻る</a>
-        <a class="button is-info" id="regenerateQuestion">問題を再生成</a>
+        <a class="button is-success is-large" id="redirectToHome">ホームに戻る</a>
+        <a class="button is-info is-large" id="regenerateQuestion">問題を再生成</a>
       </div>
       
 
