--- a/public/home.html
+++ b/public/home.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 	<head>
 		<title>教科書から問題を作る！</title>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
@@ -73,7 +74,7 @@
                     <h4 class="title is-4">④問題を生成します</h4>
                     <div class="field">
                         <div class="buttons" type="submit">
-                            <button class="button is-primary">問題を生成</button>
+                            <button class="button is-primary" id="generateQuestion">問題を生成</button>
                         </div>
                     </div>
                 </div>
@@ -83,5 +84,5 @@
 
 
 	</body>
-    <script src="./script.js"></script>
+    <script src="./home.js"></script>
 </html>
