問題の生成できた

--- a/public/form.html
+++ b/public/form.html
@@ -13,19 +13,19 @@
         <div id="answers">
           <label class="radio">
             <input type="radio" name="answer" value="option1">
-            option 1
+            <span id="option1"></span>
           </label><br>
           <label class="radio">
             <input type="radio" name="answer" value="option2">
-            option 2
+            <span id="option2"></span>
           </label><br>
           <label class="radio">
             <input type="radio" name="answer" value="option3">
-            option 3
+            <span id="option3"></span>
             </label><br>
           <label class="radio">
             <input type="radio" name="answer" value="option4">
-            option 4
+            <span id="option4"></span>
             </label><br>   
         </div>       
     </div>
