--- a/public/home.html
+++ b/public/home.html
@@ -27,7 +27,7 @@
                             <div class="dropdown-content">
                                 <div class="file">
                                     <label class="file-label">
-                                        <input class="file-input" type="file" name="file">
+                                        <input class="file-input" type="file" name="file" id="file">
                                         <span class="file-cta">
                                             <span class="file-icon">
                                                 <i class="fas fa-cloud-upload-alt"></i>
