--- a/public/home.html
+++ b/public/home.html
@@ -12,35 +12,28 @@
 		<div class="section">
 			<div class="container">
                 <div class="box">
-                    <h4 class="title is-4 has-text-left">①問題を作成したい範囲の画像をアップロード</h4>
-
+                    <h4 class="title is-4 has-text-left">①問題を作成したい範囲の画像をアップロード(png形式)</h4>
                     <div class="dropdown is-active">
                         <div class="dropdown-trigger">
-                            <button class="button is-primary is-light is-fullwidth">
-                                <span>ファイルをアップロード</span>
-                                <span class="icon is-small">
-                                    <i class="fas fa-upload"></i>
+                            <label class="file-label">
+                                <input class="file-input" type="file" name="file" id="file">
+                                <span class="file-cta has-text-centered is-primary"> <!-- is-primaryをfile-ctaに追加 -->
+                                    <span class="file-label">
+                                        ファイルをアップロード
+                                    </span>
                                 </span>
-                            </button>
-                        </div>
-                        <div class="dropdown-menu" id="dropdown-menu" role="menu">
-                            <div class="dropdown-content">
-                                <div class="file">
-                                    <label class="file-label">
-                                        <input class="file-input" type="file" name="file" id="file">
-                                        <span class="file-cta">
-                                            <span class="file-icon">
-                                                <i class="fas fa-cloud-upload-alt"></i>
-                                            </span>
-                                            <span class="file-label">
-                                                Choose a file…
-                                            </span>
-                                        </span>
+                            </label>
+                            <label class="file-label">
+                                <span class="box has-text-centered is-primary"> <!-- is-primaryをfile-ctaに追加 -->
+                                    <label class="checkbox">
+                                        <input type="checkbox" id = "checkbox">
+                                        サンプル画像を利用してみる
                                     </label>
-                                </div>
-                            </div>
+                                </span>
+                            </label>
                         </div>
                     </div>
+                    
                 </div>
 
                <!-- 問題数選択 -->
