--- a/public/form.html
+++ b/public/form.html
@@ -9,32 +9,13 @@
 </head>
 <body>
     <div id="questionAndAnswer">
-        <div id="question">Question</div>
-        <div id="answers">
-          <label class="radio">
-            <input type="radio" name="answer" value="option1">
-            <span id="option1"></span>
-          </label><br>
-          <label class="radio">
-            <input type="radio" name="answer" value="option2">
-            <span id="option2"></span>
-          </label><br>
-          <label class="radio">
-            <input type="radio" name="answer" value="option3">
-            <span id="option3"></span>
-            </label><br>
-          <label class="radio">
-            <input type="radio" name="answer" value="option4">
-            <span id="option4"></span>
-            </label><br>   
-        </div>       
+        <div id="questions-container"></div>
     </div>
 
-    <div class="buttons is-centered">
-      <a class="button is-success is-large" id="submit">送信</a>
+    <div class="buttons is-centered" id="button">
+        <a class="button is-success is-large" id="submit">送信</a>
     </div>
 
-    <script src = "form.js"></script>
-
+    <script src="form.js"></script>
 </body>
 </html>
