--- a/public/index.html
+++ b/public/index.html
@@ -12,24 +12,26 @@
 		<div class="section">
 			<div class="container">
                 <div class="box">
-                    <h4 class="title is-4 has-text-left">①問題を作成したい範囲の画像をアップロード(png形式)</h4>
-                    <div class="dropdown is-active">
-                        <div class="dropdown-trigger">
-                            <label class="file-label">
-                                <input class="file-input" type="file" name="file" id="file" onchange="displayFileName()">
-                                <span class="file-cta has-text-centered is-primary">
-                                    <span class="file-label">
-                                        ファイルをアップロード
+                    <h4 class="title is-4 has-text-left">①問題を作成したい範囲の画像をアップロード</h4>
+                            <div class="file" style="display: inline-block;">
+                                <label class="file-label">
+                                    <input class="file-input" type="file" name="file" id="file" onchange="displayFileName()">
+                                    <span class="file-cta has-text-centered is-primary">
+                                        <span class="file-label">
+                                            ファイルをアップロード
+                                        </span>
                                     </span>
-                                </span>
-                            </label>
-                            <div class="box has-text-centered is-primary">
-                                <label class="checkbox">
-                                    <input type="checkbox" id="checkbox">
-                                    サンプル画像を利用してみる
                                 </label>
                             </div>
-                        </div>
+                            または
+                            <div class="select">
+                              <select id="sample-select">
+                                <option value="">サンプル画像から選ぶ</option>
+                              </select>
+                            </div>
+                            <div>
+                                <img style="max-width: 100%; max-height: 400px" id="preview"/>
+                            </div>
                     </div>
                     
                 </div>
@@ -39,7 +41,7 @@
 					<h4 class="title is-4">②問題数を選択してください</h4>
 					<div class="field">
 						<div class="control is-half">
-							<input class="input" type="number" id="number-of-problems" name="number_of_problems" placeholder="問題数を入力してください..." min="0">
+							<input class="input" type="number" id="number-of-problems" name="number_of_problems" placeholder="問題数を入力してください..." min="1" value=1>
 						</div>
 					</div>
 				</div>
