画像読み込みエラーを処理

--- a/public/index.html
+++ b/public/index.html
@@ -68,6 +68,7 @@
                     <div class="field">
                         <div class="buttons" type="submit">
                             <button class="button is-primary" id="generateQuestion">問題を生成</button>
+                            <span class="has-text-danger" id="submit-error"></span>
                         </div>
                     </div>
                 </div>
