見た目を変更

--- a/public/form.html
+++ b/public/form.html
@@ -8,10 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="questions-container"></div>
+    <div class="container mt-5">
+        <div id="questions-container"></div>
 
-    <div class="buttons is-centered">
-        <a class="button is-success is-large" id="submit">送信</a>
+        <div class="buttons is-centered mt-3">
+            <button class="button is-success is-large" id="submit">送信</button>
+        </div>
     </div>
 
     <script src="form.js"></script>
