--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 		<title>教科書から問題を作る！</title>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 	</head>
-	<body class="has-navbar-fixed-top">
+	<body class="">
 		<div class="box cta has-background-primary" style="padding: 2rem;">
 			<h1 class="title is-2 has-text-white has-text-weight-bold">画像から関連した問題を作成します</h1>
 		</div>
