resultの見た目を変更

--- a/public/result.html
+++ b/public/result.html
@@ -5,16 +5,16 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Result</title>
 </head>
 <body>
-    <div id="questionAndAnswer">
+    <div class="container mt-5">
         <div id="questions-container"></div>
-    </div>
 
-    <div class="buttons is-centered" id="button">
-        <a class="button is-success is-large" id="redirectToHome">ホームに戻る</a>
-        <a class="button is-info is-large" id="regenerateQuestion">問題を再生成</a>
+        <div class="buttons is-centered mt-3">
+            <button class="button is-info" id="redirectToHome">ホームに戻る</button>
+            <button class="button is-success" id="regenerateQuestion">新しい問題を生成</button>
+        </div>
     </div>
 
     <script src="result.js"></script>
