新しい問題を生成ができるようになった

--- a/public/result.html
+++ b/public/result.html
@@ -14,6 +14,7 @@
         <div class="buttons is-centered mt-3">
             <button class="button is-info" id="redirectToHome">ホームに戻る</button>
             <button class="button is-success" id="regenerateQuestion">新しい問題を生成</button>
+            <span class="has-text-danger" id="submit-error"></span>
         </div>
     </div>
 
